--- a/README
+++ b/README
@@ -6,7 +6,7 @@ climatology plugin for opencpn
 Compiling
 =========
 
-* git clone git://github.com/seandepagnier/climatology_pi.git
+* git clone --recurse-submodules git://github.com/seandepagnier/climatology_pi.git
 
 Under windows, you must find the file "opencpn.lib" (Visual Studio) or "libopencpn.dll.a" (mingw) which is built in the build directory after compiling opencpn.  This file must be copied to the plugin directory.
 
